--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 out/*
-pkg/i_files/*
 bin/__pycache__/*
 **/log.txt
 locale
-pkg/*-analysis-target/**
+package/analysis_target_*
+*.tar.gz
+package/smake_out/*.txt
+package/smake_out/go/*
+package/smake_out/gnustep/*
+package/smake_out/graphics/*
+package/smake_out/fonts/*
+package/smake_out/experiment_setup/*
+package/targets/*
