--- a/docker/patron/Dockerfile
+++ b/docker/patron/Dockerfile
@@ -18,26 +18,15 @@ ENV SMAKE_OUT=$OUT/smake-out
 # for debian package build
 ENV DEB_BUILD_OPTIONS="nocheck notest"
 RUN sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
-COPY ../../../patron-artifact $SRC
 
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y make git gcc tzdata bear dpkg-dev libtinfo5 wget vim tmux opam
 
 RUN git clone https://github.com/prosyslab/smake.git
+RUN git clone https://github.com/prosyslab/patron-artifact.git $SRC
 
-# install llvm-toolchain
-COPY install-llvm.sh $SRC
-RUN chmod +x $SRC/install-llvm.sh
-RUN $SRC/install-llvm.sh
-
-# install gllvm
-RUN wget "https://go.dev/dl/go1.20.linux-amd64.tar.gz"
-RUN tar -C /usr/local -xzf go1.20.linux-amd64.tar.gz
-ENV GOPATH=/go
-RUN GO111MODULE=off /usr/local/go/bin/go get github.com/SRI-CSL/gllvm/cmd/...
-
-RUN chmod +x $SRC/build_latest.sh
-RUN $SRC/build_latest.sh
+RUN chmod +x $SRC/patron-artifact/build_latest.sh
+RUN $SRC/patron-artifact/build_latest.sh
 
 WORKDIR $SRC
