--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ package/smake_out/fonts/*
 package/smake_out/experiment_setup/*
 package/smake_out/*
 package/targets/*
+*/sparrow-out/
+package/analysis_*
