--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ package/smake_out/fonts/*
 package/smake_out/experiment_setup/*
 package/smake_out/*
 package/targets/*
-*/sparrow-out/
+*/sparrow-out/*
 package/analysis_*
+**sparrow-out**
