--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/prosyslab/patron
 [submodule "sparrow"]
 	path = sparrow
-	url = git@github.com:prosyslab/sparrow-incubator.git
+	url = git@github.com:prosyslab/sparrow.git
