[gitmodule] change url to https

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/prosyslab/patron
 [submodule "sparrow"]
 	path = sparrow
-	url = git@github.com:prosyslab/sparrow.git
+	url = https://github.com/prosyslab/sparrow
 [submodule "smake"]
 	path = smake
 	url = https://github.com/prosyslab/smake
