--- a/docker/patron/Dockerfile
+++ b/docker/patron/Dockerfile
@@ -5,15 +5,13 @@ ENV TZ=Asia/Seoul
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ >/etc/timezone
 
 ENV SRC=/src
-ENV OUT=/out
-RUN mkdir -p $SRC $OUT/smake-out
+RUN mkdir -p $SRC
 
-ENV BUILD=/src/build.sh
+ENV BUILD=/tmp/build.sh
 
 # Sparrow
-ENV SMAKE_DIR=/smake
+ENV SMAKE_DIR=/patron-artifact/smake
 ENV SMAKE_BIN=$SMAKE_DIR/smake
-ENV SMAKE_OUT=$OUT/smake-out
 
 # for debian package build
 ENV DEB_BUILD_OPTIONS="nocheck notest"
@@ -21,12 +19,10 @@ RUN sed -Ei 's/^# deb-src /deb-src /' /etc/apt/sources.list
 
 RUN apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y make git gcc tzdata bear dpkg-dev libtinfo5 wget vim tmux opam dune
+    apt-get install -y make git gcc tzdata bear dpkg-dev libtinfo5 wget vim tmux opam dune python3 python3-pip
 
-RUN git clone https://github.com/prosyslab/smake.git
-RUN git clone https://github.com/prosyslab/patron-artifact.git $SRC
-
-RUN chmod +x $SRC/patron-artifact/build_latest.sh
-RUN $SRC/patron-artifact/build_latest.sh
+COPY build.sh /tmp
+RUN chmod +x $BUILD
+RUN $BUILD
 
 WORKDIR $SRC
